fixed scheduling box on homepage overflow

--- a/client/src/styles/custom.css
+++ b/client/src/styles/custom.css
@@ -15,7 +15,7 @@
 }
 
 .home-card {
-  height: 560px;
+  height: 100%;
 }
 
 .order-button {
